--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ES2020"],
+    "lib": ["ESNext", "DOM"],
     "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": true,
