Add troubleshooting and usage guides for better-auth-telegram plugin
- Created a comprehensive troubleshooting guide covering common issues, their causes, and solutions.
- Developed a usage guide with examples for basic sign-in, sign-in with redirect, linking and unlinking Telegram accounts, and session management.
- Included framework-specific examples for React/Next.js, Vanilla JavaScript, and Vite.
- Added best practices and error handling recommendations for better user experience.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,16 @@
     "plugin",
     "typescript"
   ],
-  "author": "",
+  "author": "Vibe Code <hello@vcode.sh> (https://vcode.sh)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vcode-sh/better-auth-telegram.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vcode-sh/better-auth-telegram/issues"
+  },
+  "homepage": "https://github.com/vcode-sh/better-auth-telegram#readme",
   "peerDependencies": {
     "better-auth": "^1.0.0"
   },
