--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "prepublishOnly": "npm run type-check && npm run test && npm run build"
   },
   "keywords": [
     "better-auth",
@@ -45,10 +50,14 @@
     "better-auth": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "better-auth": "^1.0.0",
+    "@types/node": "^24.6.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "better-auth": "^1.3.24",
+    "happy-dom": "19.0.2",
     "node-loader": "^2.1.0",
-    "tsup": "^8.0.0",
-    "typescript": "^5.0.0"
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
