--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
   "peerDependencies": {
     "better-auth": "^1.0.0"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "devDependencies": {
-    "@types/node": "^24.6.1",
+    "@types/node": "^22.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "better-auth": "^1.3.24",
-    "happy-dom": "19.0.2",
+    "happy-dom": "^19.0.2",
     "node-loader": "^2.1.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
