feat: integrate Ultracite/Biome for code quality (v0.3.0)
- Add Biome 2.2.4 (Rust-based linter/formatter)
- Add Ultracite 5.4.5 (AI-ready preset)
- Add lint-staged for pre-commit hooks
- Convert all interface to type for consistency
- Update imports from crypto to node:crypto
- Improve test coverage to 100% (110 tests)
- Enhance code formatting and organization
- Update documentation with Vibe Code tone
- Add VSCode integration for consistent development

Breaking Changes: None - fully backward compatible

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "strictNullChecks": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
