--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-auth-telegram",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Telegram authentication plugin for Better Auth",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -53,14 +53,22 @@
     "node": ">=22.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
+    "@biomejs/biome": "2.2.4",
+    "@types/node": "22.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "better-auth": "^1.3.24",
     "happy-dom": "^19.0.2",
+    "lint-staged": "16.2.3",
     "node-loader": "^2.1.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
+    "ultracite": "^5.4.6",
     "vitest": "^3.2.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+      "npx ultracite fix"
+    ]
   }
 }
