--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
-    "@types/node": "22.0.0",
+    "@types/node": "^22.0.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "better-auth": "^1.3.24",
@@ -63,7 +63,7 @@
     "node-loader": "^2.1.0",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3",
-    "ultracite": "^5.4.6",
+    "ultracite": "^5.4.5",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
