feat: add PR validation workflow and branch protection setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,3 +92,6 @@ jobs:
 
       - name: Run type check
         run: npm run type-check
+
+      - name: Run Ultracite check
+        run: npx ultracite check
