feat: switch to cryptographic api provided by `@better-auth/utils`

--- a/package.json
+++ b/package.json
@@ -70,5 +70,8 @@
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
       "npx ultracite fix"
     ]
+  },
+  "dependencies": {
+    "@better-auth/utils": "^0.3.0"
   }
 }
