--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,96 +2,113 @@ name: CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
   pull_request:
-    branches: [main, develop]
+    branches: [main]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
-    name: Test
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [22.x, 24.x]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run type check
+      - name: Type check
         run: npm run type-check
-
-      - name: Run tests
-        run: npm test
 
       - name: Run tests with coverage
         run: npm run test:coverage
 
-      - name: Upload coverage to Codecov
-        if: matrix.node-version == '22.x' && github.event_name == 'push'
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage
+        if: matrix.node-version == '22.x'
+        uses: codecov/codecov-action@v5
         with:
           files: ./coverage/lcov.info
           fail_ci_if_error: false
-          token: ${{ secrets.CODECOV_TOKEN || '' }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  test-bun:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Install dependencies
+        run: bun install
+
+      - name: Type check
+        run: bun run type-check
+
+      - name: Run tests
+        run: bun run test
 
   build:
-    name: Build
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, test-bun]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v6
         with:
-          node-version: "22.x"
-          cache: "npm"
+          node-version: 22.x
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build package
+      - name: Build
         run: npm run build
 
-      - name: Check build output
+      - name: Verify dist artifacts
         run: |
-          test -f dist/index.js || exit 1
-          test -f dist/index.d.ts || exit 1
-          test -f dist/client.js || exit 1
-          test -f dist/client.d.ts || exit 1
+          echo "## Build Artifacts" >> $GITHUB_STEP_SUMMARY
+          echo "| File | Size |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|------|" >> $GITHUB_STEP_SUMMARY
+          for f in dist/index.js dist/index.cjs dist/index.d.ts dist/index.d.cts \
+                   dist/client.js dist/client.cjs dist/client.d.ts dist/client.d.cts; do
+            test -f "$f" || { echo "::error::Missing artifact: $f"; exit 1; }
+            SIZE=$(wc -c < "$f" | tr -d ' ')
+            echo "| $f | ${SIZE}B |" >> $GITHUB_STEP_SUMMARY
+          done
 
   lint:
-    name: Lint
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Use Node.js 22.x
+        uses: actions/setup-node@v6
         with:
-          node-version: "22.x"
-          cache: "npm"
+          node-version: 22.x
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run type check
-        run: npm run type-check
-
-      - name: Run Ultracite check
-        run: npx ultracite check
+      - name: Lint
+        run: npm run lint
