--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
   "name": "better-auth-telegram",
-  "version": "0.3.2",
+  "version": "0.4.0",
+  "type": "module",
   "description": "Telegram authentication plugin for Better Auth",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     },
     "./client": {
-      "types": "./dist/client.d.ts",
-      "import": "./dist/client.js",
-      "require": "./dist/client.cjs"
+      "import": {
+        "types": "./dist/client.d.ts",
+        "default": "./dist/client.js"
+      },
+      "require": {
+        "types": "./dist/client.d.cts",
+        "default": "./dist/client.cjs"
+      }
     }
   },
+  "sideEffects": false,
   "files": [
     "dist"
   ],
@@ -27,6 +40,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "lint": "npx ultracite check",
+    "lint:fix": "npx ultracite fix",
     "prepublishOnly": "npm run type-check && npm run test && npm run build"
   },
   "keywords": [
@@ -47,27 +62,27 @@
   },
   "homepage": "https://github.com/vcode-sh/better-auth-telegram#readme",
   "peerDependencies": {
-    "better-auth": "^1.0.0"
+    "better-auth": "^1.4.18"
   },
   "engines": {
     "node": ">=22.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "@types/node": "^22.0.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "better-auth": "^1.3.24",
-    "happy-dom": "^19.0.2",
-    "lint-staged": "16.2.3",
+    "@biomejs/biome": "2.4.4",
+    "@types/node": "^25.3.0",
+    "@vitest/coverage-v8": "4.0.18",
+    "@vitest/ui": "^4.0.18",
+    "better-auth": "^1.4.18",
+    "happy-dom": "20.6.3",
+    "lint-staged": "16.2.7",
     "node-loader": "^2.1.0",
-    "tsup": "^8.5.0",
-    "typescript": "^5.9.3",
-    "ultracite": "^5.4.5",
-    "vitest": "^3.2.4"
+    "tsup": "8.5.1",
+    "typescript": "5.9.3",
+    "ultracite": "7.2.3",
+    "vitest": "4.0.18"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+    "*.{ts,tsx,js,jsx,json,css}": [
       "npx ultracite fix"
     ]
   }
