--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-auth-telegram",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "description": "Telegram authentication plugin for Better Auth",
   "main": "./dist/index.cjs",
@@ -79,11 +79,14 @@
     "better-auth": "1.5.0",
     "happy-dom": "20.7.0",
     "lint-staged": "16.2.7",
-    "node-loader": "^2.1.0",
     "tsup": "8.5.1",
     "typescript": "5.9.3",
     "ultracite": "7.2.3",
     "vitest": "4.0.18"
+  },
+  "overrides": {
+    "hono": "4.12.3",
+    "lodash": "4.17.23"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css}": [
