chore: release v1.4.0 with OIDC improvements and documentation updates
- Enhanced OIDC functionality by implementing a separate client secret option for Telegram's OIDC, ensuring proper authentication flow.
- Updated the CHANGELOG to reflect the removal of non-standard parameters and clarified the OIDC setup process in the README.
- Restructured user account linking logic to support users created via OIDC, preventing duplicate user creation errors.
- Added comprehensive tests for the new OIDC features and account linking scenarios.

--- a/test/.env.local.example
+++ b/test/.env.local.example
@@ -17,5 +17,11 @@ BETTER_AUTH_URL="http://localhost:3000"
 TELEGRAM_BOT_TOKEN="123456789:ABCdefGHIjklMNOpqrsTUVwxyz"
 TELEGRAM_BOT_USERNAME="your_bot_username"
 
+# Telegram OIDC Configuration (separate bot with Web Login enabled)
+# In @BotFather mini app: Bot Settings > Web Login
+# Register Allowed URLs: your origin + /api/auth/callback/telegram-oidc
+TELEGRAM_OIDC_CLIENT_ID="your_oidc_bot_id"
+TELEGRAM_OIDC_CLIENT_SECRET="your_oidc_client_secret"
+
 # Next.js - set to your ngrok URL for external access
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
